--- a/mandarin_market/package.json
+++ b/mandarin_market/package.json
@@ -25,5 +25,6 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "vite": "^6.3.5"
-  }
+  },
+  "proxy": "https://dev.wenivops.co.kr"
 }
